@@ -1,3 +1,11 @@
+2022-08-27T01:27:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937535982
+* notice: last 14d: unq all: 5 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 282 489 / 293 506
+* notice: next accum: outdated-unq outdated-all / unq all: 282 489 / 293 507
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-08-26]
+
 2022-08-26T16:21:38Z:
 * notice: last 14d: unq all: 5 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 282 489 / 293 505
